--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -24,6 +24,6 @@
 
 
 
-<h3>Δείτε αναλυτικές πληροφορίες για το σύστημα Jarrive [εδώ](https://github.com/ellak-monades-aristeias/Jarrive)</h3>
+Δείτε αναλυτικές πληροφορίες για το σύστημα Jarrive [εδώ](https://github.com/ellak-monades-aristeias/Jarrive)
 
 
