--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -22,8 +22,8 @@
 7. Breadboard (optional)
 
 
+<h2>Αναλυτικές Πληροφορίες</h2>
 
-
-Δείτε αναλυτικές πληροφορίες για το σύστημα Jarrive [εδώ](https://github.com/ellak-monades-aristeias/Jarrive)
+Δείτε το σύστημα Jarrive [εδώ](https://github.com/ellak-monades-aristeias/Jarrive)
 
 
