--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -13,14 +13,15 @@
 
 <h2>Απαιτήσεις Κατασκευής</h2>
 
-1. Arduino UNO
-2. Bluetooth module HM-10
-3. 220V AC Relay 5V for Arduino
-4. [Velleman K8064 DC Controlled Dimmer](http://www.velleman.eu/downloads/0/illustrated/illustrated_assembly_manual_k8064.pdf)
-5. Jumper Cables
-6. Power Supply for Arduino
-7. Breadboard (optional)
+1. Arduino UNO (~25ευρώ)
+2. Bluetooth module HM-10 (~5ευρώ)
+3. 220V AC Relay 5V for Arduino (~3ευρώ)
+4. [Velleman K8064 DC Controlled Dimmer](http://www.velleman.eu/downloads/0/illustrated/illustrated_assembly_manual_k8064.pdf) (~30ευρώ)
+5. Jumper Cables (~4ευρώ)
+6. Power Supply for Arduino (~7ευρώ)
+7. Breadboard (optional) (~2ευρώ)
 
+Συνολικό ενδεικτικό κόστος κατασκευής: ~75ευρώ
 
 <h2>Αναλυτικές Πληροφορίες</h2>
 
