--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -13,13 +13,13 @@
 
 <h2>Απαιτήσεις Κατασκευής</h2>
 
-1. Arduino UNO (~25ευρώ)
+1. [Arduino UNO](http://www.devobox.com/index.php?id_product=1&controller=product&id_lang=1) (~25ευρώ)
 2. Bluetooth module HM-10 (~5ευρώ)
 3. 220V AC Relay 5V for Arduino (~3ευρώ)
 4. [Velleman K8064 DC Controlled Dimmer](http://www.velleman.eu/downloads/0/illustrated/illustrated_assembly_manual_k8064.pdf) (~30ευρώ)
-5. Jumper Cables (~4ευρώ)
-6. Power Supply for Arduino (~7ευρώ)
-7. Breadboard (optional) (~2ευρώ)
+5. [Jumper Cables](http://www.devobox.com/index.php?id_product=4&controller=product&id_lang=1) (~4ευρώ)
+6. [Power Supply for Arduino](http://www.devobox.com/index.php?id_product=7&controller=product&id_lang=1) (~7ευρώ)
+7. [Breadboard](http://www.devobox.com/index.php?id_product=17&controller=product&id_lang=1) (optional) (~2ευρώ)
 
 Συνολικό ενδεικτικό κόστος κατασκευής: ~75ευρώ
 
