--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -10,6 +10,8 @@
 <h2>Δυνητικοί Χρήστες </h2>
 Το σύστημα J’arrive μπορεί να χρησιμοποιηθεί σχεδόν σε όλους τους τομείς της καθημερινότητας. Σε οποιοδήποτε χώρο ή γραφείο στον ιδιωτικό ή δημόσιο τομέα. Ακόμα και σε δημόσιους χώρους (για φωτισμό) ή και στο σπίτι του κάθε χρήστη. Οι εφαρμογές είναι απεριόριστες.
 
+Το έργο μπορεί να επεκταθεί και για να ελέγχει περισσότερες συσκευές/μονάδες σε έναν εργασιακό ή προσωπικό χώρο. Παράλληλα η εφαρμογή θα μπορούσε να έχει και δυνατότητα χρονοπρογραμματισμού για κάποιες συγκεκριμένες λειτουργίες, όπως ενεργοποίηση του κλιματισμού πριν ο χρήστης εισέλθει στον χώρο)
+
 
 <h2>Απαιτήσεις Κατασκευής</h2>
 
@@ -22,6 +24,14 @@
 7. [Breadboard](http://www.devobox.com/index.php?id_product=17&controller=product&id_lang=2) (optional) (~2ευρώ)
 
 Συνολικό ενδεικτικό κόστος κατασκευής: ~75ευρώ
+
+* Επιπλέον κόστος στην περίπτωση που θέλουμε η κατασκευή να τοποθετηθεί σε κουτί.
+** Η τιμή είναι ενδεικτική και μπορεί να διαφέρει λόγω αγοράς μεγάλης ποσότητας απο τον προμηθευτή.
+
+Ενδεικτικές προσφορές απο [προμηθευτή](http://www.devobox.com) για αυξημένες ποσότητες:
+- 1 x (Συνολική λίστα υλικών για σύστημα Jarrive) -> ~75ευρώ/τεμάχιο
+- 10 x (Συνολική λίστα υλικών για σύστημα Jarrive) -> ~70ευρώ/τεμάχιο
+- 100 x (Συνολική λίστα υλικών για σύστημα Jarrive) -> ~67ευρώ/τεμάχιο
 
 <h2>Αναλυτικές Πληροφορίες</h2>
 
