--- a/Ταυτότητα Έργου.md
+++ b/Ταυτότητα Έργου.md
@@ -15,15 +15,15 @@
 
 <h2>Απαιτήσεις Κατασκευής</h2>
 
-1. [Arduino UNO](http://www.devobox.com/index.php?id_product=1&controller=product&id_lang=2) (~25ευρώ)
-2. Bluetooth module HM-10 (~5ευρώ)
-3. 220V AC Relay 5V for Arduino (~3ευρώ)
-4. [Velleman K8064 DC Controlled Dimmer](http://www.velleman.eu/downloads/0/illustrated/illustrated_assembly_manual_k8064.pdf) (~30ευρώ)
-5. [Jumper Cables](http://www.devobox.com/index.php?id_product=4&controller=product&id_lang=2) (~4ευρώ)
-6. [Power Supply for Arduino](http://www.devobox.com/index.php?id_product=7&controller=product&id_lang=2) (~7ευρώ)
-7. [Breadboard](http://www.devobox.com/index.php?id_product=17&controller=product&id_lang=2) (optional) (~2ευρώ)
+1. [Arduino UNO](http://www.devobox.com/index.php?id_product=1&controller=product&id_lang=2) (22.90 ευρώ)
+2. Bluetooth module HM-10 (~5.00 ευρώ)
+3. 220V AC Relay 5V for Arduino (~3.00 ευρώ)
+4. [Velleman K8064 DC Controlled Dimmer](http://www.velleman.eu/downloads/0/illustrated/illustrated_assembly_manual_k8064.pdf) (~30.00 ευρώ)
+5. [Jumper Cables](http://www.devobox.com/index.php?id_product=4&controller=product&id_lang=2) (3.20 ευρώ)
+6. [Power Supply for Arduino](http://www.devobox.com/index.php?id_product=8&controller=product&id_lang=2) (6.90 ευρώ)
+7. [Breadboard](http://www.devobox.com/index.php?id_product=17&controller=product&id_lang=2) (optional) (1.80 ευρώ)
 
-Συνολικό ενδεικτικό κόστος κατασκευής: ~75ευρώ
+Συνολικό ενδεικτικό κόστος κατασκευής: ~73.00 ευρώ
 
 * Επιπλέον κόστος στην περίπτωση που θέλουμε η κατασκευή να τοποθετηθεί σε κουτί.
 ** Η τιμή είναι ενδεικτική και μπορεί να διαφέρει λόγω αγοράς μεγάλης ποσότητας απο τον προμηθευτή.
